--- a/package.json
+++ b/package.json
@@ -15,5 +15,7 @@
     "remark": "^12.0.0",
     "remark-html": "^11.0.2"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "babel-plugin-module-resolver": "^4.0.0"
+  }
 }
